# ml-acn-embed

./: .pylintrc  ACKNOWLEDGEMENTS  README.md  path.sh  pyproject.toml
doc/: downloads.md  setup.md
doc/embed/: dataprep.md  train.md
doc/exp/: dialect.md  oovrecovery.md  wakeword.md  wordclassify.md
doc/fe_am/: hmm.md  test_dnn.md  train_cd_dnn.md  train_mono_dnn.md
doc/misc/: batch_embed.md  forcealign.md
src/acn_embed/embed/data/: phone_ali_to_tran.py
src/acn_embed/embed/embedder/: audio_embedder.py  text_embedder.py
src/acn_embed/embed/model/: get_model.py
src/acn_embed/embed/pronlendist/: comb_iterator.py  get_ngram_scores.py  get_pronlen_dist.py  plot.py
src/acn_embed/exp/dialect/: dialect_distance.py  get_sa1_tran.py  get_timit_f_embeddings.py  sa1-lexicon.txt
src/acn_embed/exp/oovrecovery/: create_deficient_vocab.py  embed_oovs.py  min_ed.py  recover_oov.py  recover_oov_min_ed.py
src/acn_embed/exp/simulation/: plot.py  run.py
src/acn_embed/exp/wakeupconfusion/: expected_confusion.py  get_embeddings.py  plot_expected_confusion.py
src/acn_embed/setup/: cuts_reader.py  cuts_to_tran.py  flac_to_utt_wav.py  get_lexicon.py  get_words_from_cuts.py  get_words_from_lm.py  get_words_from_tran.py  non-sil-phones.json  subtract_data.py
src/acn_embed/tools/: acn_embed_audio.py  acn_embed_graphemes.py  acn_embed_phones.py  acn_nnsearch.py  force_align.py
src/acn_embed/util/: base_inference_input.py  lexicon.py  logger.py  phone_table.py  read_arpa.py  three_phase_scheduler.py  torchutils.py  transformer_scheduler.py  utils.py  word_table.py
(+75 files in other folders)
